prevent messages shifting chat input

--- a/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
@@ -106,6 +106,7 @@
   color: var(--color-gray-dark);
   text-align: left;
   padding: var(--border-size) 0;
+  max-height: 1rem;
 
   [dir="rtl"] & {
     text-align: right;
